# its

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  dev.sh  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0e5b796a0791_add_attachments_table.py  2a1cdac14b2d_add_comments_table.py  660ab42b08a5_initial_tables.py  7f2d0bc279e0_add_created_at.py  889c340f7291_fix_field_issues.py  fae76e474414_initial_schema_with_varchar_enums.py
backend/app/: database.py  main.py  models.py  schemas.py  storage.py  websocket_manager.py
backend/app/core/: dependencies.py  security.py
backend/app/routers/: attachments.py  auth.py  comments.py  issues.py  users.py  ws.py
frontend/: .env.example  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/lib/: api.ts  types.ts  websocket.svelte.ts
frontend/src/lib/components/issues/: AttachmentSection.svelte  CommentForm.svelte  CommentSection.svelte  CreateIssueDialog.svelte  EditIssueDialog.svelte  IssueFilters.svelte  IssueTable.svelte  Pagination.svelte  StatsBar.svelte
frontend/src/lib/components/ui/alert/: alert.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/components/ui/dialog/: dialog-content.svelte
frontend/src/lib/stores/: auth.svelte.ts  auth.ts  theme.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
(+1 files in other folders)
